[FIX] web: Radio button alignement + LESS division
* Fix wrong split between layout/non-layout less rules
* Make the radio buttons and their labels to always be on the same line

--- a/web/static/src/less/form_view.less
+++ b/web/static/src/less/form_view.less
@@ -373,31 +373,8 @@
     }
 
     // Radio buttons
-    .o_form_field_radio {
-        .o_radio_item {
-            > input {
-                margin: 0 5px 0 0;
-            }
-            > label {
-                margin: 0;
-            }
-        }
-
-        &.o_horizontal {
-            .o_radio_item {
-                margin-right: 10px;
-            }
-        }
-
-        &.o_vertical {
-            .o_radio_item {
-                margin-bottom: 5px;
-            }
-        }
-
-        .o_form_radio {
-            outline: none;
-        }
+    .o_form_field_radio .o_form_radio {
+        outline: none;
     }
     
     // Icons
